# Monocular-VLM-Depth-Embeddings

./: .gitignore  .pre-commit-config.yaml  Dockerfile  NOTICE.md  README.md  SIGLIP_IMPLEMENTATION.md  env.example  environment.yml  pyproject.toml  test_depth_fusion.py  test_siglip_implementation.py
assets/: README.md
configs/: ablations.yaml  base.yaml  paths.local.yaml.example
examples/: depth_vila_integration.py
notebooks/: 01_inspect_embeddings.ipynb  02_umap_clusters.ipynb
scripts/: export_artifacts.sh  pack_data.sh  run_infer.sh  sweep_ps3.sh  train_head.sh
src/mvde/: __init__.py  model.py
src/mvde/backbones/: __init__.py  siglip.py
src/mvde/depth/: __init__.py  midas.py  zoe.py
src/mvde/detectors/: __init__.py  referent.py  yolo.py
src/mvde/embed/: __init__.py  augment.py  pooling.py
src/mvde/evaluation/: __init__.py  metrics.py  tasks.py
src/mvde/export/: __init__.py  patch_stats.py
src/mvde/fusion/: __init__.py  depth_fusion.py
src/mvde/heads/: __init__.py  dpt_decoder.py  lora.py  mlp.py
src/mvde/io/: __init__.py  datasets.py  kitti_depth.py  serialization.py
src/mvde/pipelines/: __init__.py  infer.py  train_depth.py  train_head.py
src/mvde/utils/: __init__.py  config.py  logging.py  viz.py
src/mvde/vila/: __init__.py  client.py  ps3_controls.py
tests/: test_depth_norm.py  test_kitti_depth_unit.py  test_pooling.py  test_serialization.py
